# document-clustering

./: .gitignore  README.md  pyproject.toml
document-clustering/: kmeans.py
